# SDLOpengl

./: README.md
Game/: App.cpp  CMakeLists.txt  SDL3_test.lib
Game/Src/Classes/: Camera.h  Loader.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Window.cpp  Window.h
Game/Src/Shaders/: Basic.shader
